--- a/views/dashboard.html
+++ b/views/dashboard.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8" />
     <title>Dashboard test</title>
     <script src="server.js"></script>
   </head>
-    <body>
-      <h2 id="heading">heading</h2>
+    <body class="text-center">
+      <h2 id="heading">Dashboard</h2>
+      <form action="uploadPost" method="POST">
+
+        <textarea rows="5" cols="24" name="postText"
+        
+        ></textarea>
+      </form>
     </body>
 </html>
