deleted unnessecary stuff

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -1,9 +1,7 @@
+<!DOCTYPE html>
 <html>
     <head>
         <title>Dashboard</title>
-
-
-
     </head>
     <body>
         <div class="cont">
@@ -13,6 +11,14 @@
             <div id="newPost" class="collapse">
                 <form action="onNewPost" method="POST">
                     
+                </form>
+
+                <form action="uploadPost" method="POST">
+
+                        <textarea rows="5" cols="20" name="postText">
+                        
+                        </textarea>
+                        <button type="submit">Speichern!</button>
                 </form>
             </div>
         </div>
