--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -9,9 +9,9 @@
 
             <!--eingabe für neuen Post-->
             <div id="newPost" class="collapse">
-                <form action="onNewPost" method="POST">
+                //<form action="onNewPost" method="POST">
                     
-                </form>
+                //</form>
 
                 <form action="uploadPost" method="POST">
 
