--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -3,15 +3,16 @@
     <head>
         <title>Dashboard</title>
     </head>
-    <body>
+    <body class="text-center">
+        <h2>Dashboard</h2>
         <div class="cont">
             <button data-toggle="collapse" data-target="#newPost">Neuer Post</button>
 
             <!--eingabe für neuen Post-->
             <div id="newPost" class="collapse">
-                //<form action="onNewPost" method="POST">
+                <form action="onNewPost" method="POST">
                     
-                //</form>
+                </form>
 
                 <form action="uploadPost" method="POST">
 
