--- a/views/login.ejs
+++ b/views/login.ejs
@@ -29,23 +29,26 @@
         </div>
     </form>
     <form action="/regristrieren" method="POST">
-        <table>
-            <tr>
-                <td>Username:</td>
-                <td><input type="text" name="username"></td>                   
-            </tr>
-            <tr>
-              <td>Password:</td>
-              <td><input type="password" name="password"></td>
-            </tr>
-            <tr>
-                <td>Passwort wiederholen:</td>
-                <td><input type="password" name="repeatpwd"></td>
-              </tr>
-            <tr>
-                <td><button type="submit">Regristrieren!</button></form></td>
-            </tr>
-        </table>
+        <div class="row">
+            Username:
+        </div>
+        <div class="row">
+            <input type="text" name="username">
+        </div>                   
+        <div class="row">
+                Password:
+            </div>
+        <div class="row">
+            <input type="password" name="password">
+        </div>
+        <div class="row">
+            Passwort wiederholen:
+        </div>
+            <input type="password" name="repeatpwd">
+        </div>
+        <div class="row">
+            <button type="submit">Regristrieren!</button>
+        </div>
     </form>
 </body>
 </html>
