--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -32,6 +32,7 @@
         <button type="submit">Speichern!</button>
     </form>
     <p><%= sessionValue %></p>
-<a href="/notebook">Notebook</a>
+<a href="notebook">Notebook</a><br>
+<a href="sessionLoeschen">Sessionvariable loeschen/logout</a>
 </body>
 </html>
