--- a/views/notebook.ejs
+++ b/views/notebook.ejs
@@ -7,6 +7,7 @@
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 		<style type="text/css">
 			body {
 				background-color: #333333;
@@ -15,6 +16,7 @@
 			a:link, a:active, a:visited {
 				text-decoration: none;
 				color:rgb(80, 176, 255);
+				/*border: 1px solid #4CAF50;*/
 			}
 			a:hover {
 				font-weight: bold;
@@ -37,6 +39,9 @@
 			#linkZeile {
 				margin: 10px 0px 0px 0px;
 				background-color: #444444;
+			}
+			#Ueberschrift {
+				font-weight: normal;
 			}
 		</style>
     </head>
@@ -86,17 +91,15 @@
 		<!--Navileiste mit zwei Buttons-->
 		<nav style="margin-top: 20px" class="navbar navbar-expand-md bg-dark navbar-dark sticky-top">
 			<!-- Brand class="navbar-brand" -->
-			<li class="navbar-brand">Notebook</li>
+			<a id="Ueberschrift" class="navbar-brand" title="Zum Seitenbeginn springen" href="#Seitenbeginn">Notebook</a>
 			<ul class="navbar-nav">
 				<li class="nav-item">
 					<button class="btn btn-light" data-toggle="collapse" data-target="#eingabeNeueNotiz">Neue Notiz</button>
 					<button class="btn btn-light" data-toggle="collapse" data-target="#eingabeNeuerOrdner">Neuen Ordner Erstellen</button>
 				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="#Seitenbeginn">Seitenbeginn</a>
-				</li>
 			</ul>
-		</nav> 
+			<a class="nav-link ml-auto" href="profile" style="margin:0px;padding:0px;"><i class="fa fa-home" style="font-size:36px;color:#dfdbd2;"></i></a>
+		</nav>
 
 		<!--dasWetter-->
 		<!--<div id="cont_c25652f42e8ffff5711abca60ace0ac1"><script type="text/javascript" async src="https://www.daswetter.com/wid_loader/c25652f42e8ffff5711abca60ace0ac1"></script></div>-->
