--- a/views/messenger.ejs
+++ b/views/messenger.ejs
@@ -47,14 +47,13 @@
       <nav class="navbar navbar-default">
           <div class="container-fluid">
             <div class="navbar-header">
-              <a class="navbar-brand" href="#">Mail Service</a>
-            </div>
-            <ul class="nav navbar-nav">
-              <li class="active"><a href="profile">Home</a></li>
-              <li><a href="#">Page 1</a></li>
-              <li><a href="#">Page 2</a></li>
+                <a class="navbar-brand" href="profile">Home</a>
+              </div>
+              <ul class="nav navbar-nav">
+              <li class="active"><a href="messenger">Mails</a></li>
+              <li><a href="dashboard">Dashboard</a></li>
               <li><a href="#">Page 3</a></li>
-            </ul>
+              </ul>
           </div>
         </nav>
 
