--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -10,26 +10,61 @@
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
     <script src="//ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <style type="text/CSS"> 
+        body {
+          background-color: #333333;
+          color: #dfdbd2
+        }
+        a:link, a:active, a:visited{
+          text-decoration: none;
+          color: rgb(80,176,255);
+        }
+        /* .clearfix {
+          overflow: auto;
+        } */
+        /* .header {
+          width: 100%;
+          height: 30px;
+          text-align: center;
+          padding: 15px 0px 10px;
+          font-size: 20px;
+          font-weight: bold;
+          color: dodgerblue;
+          text-shadow: 1px 1px 5px #3e3d39
+        } */
+        .space {
+          padding: 20px 0 0;
+        }
+        /* h1 {
+          padding: 0px;
+          margin: 20px 0px 0px 0px;
+          text-align: center;
+          font-weight: normal;
+        } */
+      
+      </style>
 </head>
 <body class="text-center">
-    <div class="container-fluid">
+    <nav class="navbar navbar-default">
+        <div class="container-fluid">
+            <div class="navbar-header">
+            <a class="navbar-brand" href="profile">Home</a>
+            </div>
+            <ul class="nav navbar-nav">
+            <li><a href="messenger">Mails</a></li>
+            <li><a href="dashboard">Dashboard</a></li>
+            <li><a href="#">Page 3</a></li>
+            </ul>
+        </div>
+    </nav>
+    <div class="container">
         <h1><%= profileData.username %>!</h1>
     </div>  
-    <form method="POST" action="uploadPicture">
-        <strong>Foto Hochladen:</strong> 
-        <input type="file" name="picture"> <br>
-        <button type="submit">Hochladen!</button>
-    </form>
-    <img src=<%=profileData.profilePic%>>
-    <div id="imgcontainer">
-
+    <div class="container">
+        <form action="uploadBio" method="POST">
+            <textarea class="form-control" rows="5" name="bioText" placeholder="Schreibe hier etwas über dich!"><%= profileData.bioText %></textarea>
+            <button type="submit" class="btn btn-default">Speichern!</button>
+        </form>
     </div>
-    <form action="uploadBio" method="POST">
-            
-        <textarea rows="4" cols="20" name="bioText">
-            <%= profileData.bioText %>
-        </textarea>
-        <button type="submit">Speichern!</button>
-    </form>
 </body>
 </html>
