--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -39,9 +39,9 @@
                     </div>
                     <ul class="nav navbar-nav">
                         <li class="active"><a href="profile">Profile</a></li>
-                        <li><a href="#">Dashboard</a></li>
-                        <li><a href="#">Notebook</a></li>
-                        <li><a href="#">Messenger</a></li>
+                        <li class="active"><a href="dashboard">Dashboard</a></li>
+                        <li class="active"><a href="messenger">Messenger</a></li>
+                        <li class="active"><a href="notebook">Notebook</a></li>
                       </ul>
                     </div>
             </nav>
