--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -70,7 +70,7 @@
                         <textarea class ="text-dark" rows="5" cols="20" name="postText">
                         
                         </textarea>
-                        <button type="button" class="btn btn-success"  type="submit">Speichern!</button>
+                        <button type="submit" class="btn btn-success">Speichern!</button>
                 </form>
                 <!--ss<button type="button" class="btn btn-success"  type="submit">Speichern!</button>-->
             </div>
