--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -38,10 +38,10 @@
                     <a class="navbar-brand" href="#">Dashboard</a>
                     </div>
                     <ul class="nav navbar-nav">
-                        <li class="active"><a href="profile">Profile</a></li>
+                        <li><a href="profile">Profile</a></li>
                         <li class="active"><a href="dashboard">Dashboard</a></li>
-                        <li class="active"><a href="messenger">Messenger</a></li>
-                        <li class="active"><a href="notebook">Notebook</a></li>
+                        <li><a href="messenger">Messenger</a></li>
+                        <li><a href="notebook">Notebook</a></li>
                       </ul>
                     </div>
             </nav>
