Navbar: -anpassung -logout

--- a/views/messenger.ejs
+++ b/views/messenger.ejs
@@ -30,14 +30,18 @@
       <nav class="navbar navbar-default">
           <div class="container-fluid">
             <div class="navbar-header">
-              <a class="navbar-brand" href="dashboard">Dashboard</a>
+              <a class="navbar-brand" href="#">#YourBook#</a>
             </div>
             <ul class="nav navbar-nav">
               <li><a href="notebook">Notebook</a></li>
               <li class="active"><a href="messenger">Messeger</a></li>
               <li><a href="profile">Profile</a></li>
+              <li><a href="dashboard">Dashboard</a></li>
             </ul>
-          </div>
+            <ul class="nav navbar-nav navbar-right">
+              <li><a href="/logout"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
+            </ul>
+          </div> 
         </nav>
 
     <div class="container" style="margin-bottom: 30px;">
