--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -32,19 +32,22 @@
     <body class="text-center">
         
         
-            <nav class="navbar navbar-default">
-                <div class="container-fluid">
-                    <div class="navbar-header">
-                    <a class="navbar-brand" href="#">Dashboard</a>
-                    </div>
-                    <ul class="nav navbar-nav">
-                        <li><a href="profile">Profile</a></li>
-                        <li class="active"><a href="dashboard">Dashboard</a></li>
-                        <li><a href="messenger">Messenger</a></li>
-                        <li><a href="notebook">Notebook</a></li>
-                      </ul>
-                    </div>
-            </nav>
+        <nav class="navbar navbar-default">
+            <div class="container-fluid">
+              <div class="navbar-header">
+                <a class="navbar-brand" href="#">#YourBook#</a>
+              </div>
+              <ul class="nav navbar-nav">
+                <li><a href="notebook">Notebook</a></li>
+                <li><a href="messenger">Messeger</a></li>
+                <li><a href="profile">Profile</a></li>
+                <li class="active"><a href="dashboard">Dashboard</a></li>
+              </ul>
+              <ul class="nav navbar-nav navbar-right">
+                <li><a href="/logout"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
+              </ul>
+            </div> 
+          </nav>
 
 
         <h2>Dashboard</h2>
