--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -39,7 +39,7 @@
               </div>
               <ul class="nav navbar-nav">
                 <li><a href="notebook">Notebook</a></li>
-                <li><a href="messenger">Messeger</a></li>
+                <li><a href="messenger">Messenger</a></li>
                 <li><a href="profile">Profile</a></li>
                 <li class="active"><a href="dashboard">Dashboard</a></li>
               </ul>
