--- a/views/messenger.ejs
+++ b/views/messenger.ejs
@@ -34,7 +34,7 @@
             </div>
             <ul class="nav navbar-nav">
               <li><a href="notebook">Notebook</a></li>
-              <li class="active"><a href="messenger">Messeger</a></li>
+              <li class="active"><a href="messenger">Messenger</a></li>
               <li><a href="profile">Profile</a></li>
               <li><a href="dashboard">Dashboard</a></li>
             </ul>
@@ -60,7 +60,6 @@
           </div>
         </div>
       </div>
-
 
       <!--incoming mails-->
       <div class="space">
@@ -101,9 +100,6 @@
           </form>
         </div>
       </div>
-
     </div>
   </body>
-
 </html>
-
