--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -52,7 +52,7 @@
           </div>
           <ul class="nav navbar-nav">
             <li><a href="notebook">Notebook</a></li>
-            <li><a href="messenger">Messeger</a></li>
+            <li><a href="messenger">Messenger</a></li>
             <li class="active"><a href="profile">Profile</a></li>
             <li><a href="dashboard">Dashboard</a></li>
           </ul>
