--- a/views/login.ejs
+++ b/views/login.ejs
@@ -9,46 +9,131 @@
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
     <script src="//ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <style type="text/CSS"> 
+        body {
+          background-color: #333333;
+          color: #dfdbd2;
+          padding-top: 10px;
+          text-align: center;
+        }
+      </style>
 </head>
-<body class="text-center">
-    <form action="/login" method="POST">
-        <div class="row">
-            Username:                   
-        </div>
-        <div class="row">
-            <input type="text" name="username">
-        </div>
-        <div class="row">
-            Password:
-        </div>
-        <div class="row">
-            <input type="password" name="password">
-        </div>
-        <div class="row">
-            <button type="submit">Login!</button>
-        </div>
-    </form>
-    <form action="/regristrieren" method="POST">
-        <div class="row">
-            Username:
-        </div>
-        <div class="row">
-            <input type="text" name="username">
-        </div>                   
-        <div class="row">
-                Password:
+
+<body>
+
+<div class="container">
+    <div class="row" style="padding-bottom: 10px;">
+        <h1>#YourBook#</h1>
+    </div>
+    <div class="row">
+        <div class="col-md-6 col-md-offset-3">
+            <div class="panel panel-info">
+                <div class="panel-heading">
+                    <h4>Login</h4>
+                </div>
+                <div class="panel-body">
+                    <div class="row">
+                        <div class="col-lg-12">
+                            <!-- <form action="/login" method="POST">
+                                <div class="row">
+                                    Username:                   
+                                </div>
+                                <div class="row">
+                                    <input type="text" name="username">
+                                </div>
+                                <div class="row">
+                                    Password:
+                                </div>
+                                <div class="row">
+                                    <input type="password" name="password">
+                                </div>
+                                <div class="row">
+                                    <button type="submit">Login!</button>
+                                </div>
+                            </form> -->
+                            <form id="login-form" action="/login" method="POST">
+                                <div class="form-group">
+                                    <input type="text" name="username" id="username" tabindex="1" class="form-control" placeholder="Username" value="">
+                                </div>
+                                <div class="form-group">
+                                    <input type="password" name="password" id="password" tabindex="2" class="form-control" placeholder="Passwort">
+                                </div>
+                                <div class="form-group">
+                                    <div class="row">
+                                        <div class="col-sm-6 col-sm-offset-3">
+                                            <input type="submit" name="login-submit" id="login-submit" tabindex="3" class="form-control btn btn-info" value="Einloggen">
+                                        </div>
+                                    </div>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
             </div>
+        </div>
+    </div>
+</div>
+
+<div class="container">
         <div class="row">
-            <input type="password" name="password">
+            <div class="col-md-6 col-md-offset-3">
+                <div class="panel panel-success">
+                    <div class="panel-heading">
+                        <h4>Registrieren</h4>
+                    </div>
+                    <div class="panel-body">
+                        <div class="row">
+                            <div class="col-lg-12">
+
+                                <!-- <form action="/regristrieren" method="POST">
+                                    <div class="row">
+                                        Username:
+                                    </div>
+                                    <div class="row">
+                                        <input type="text" name="username">
+                                    </div>                   
+                                    <div class="row">
+                                            Password:
+                                        </div>
+                                    <div class="row">
+                                        <input type="password" name="password">
+                                    </div>
+                                    <div class="row">
+                                        Passwort wiederholen:
+                                    </div>
+                                        <input type="password" name="repeatpwd">
+                                    </div>
+                                    <div class="row">
+                                        <button type="submit">Registrieren!</button>
+                                    </div>
+                                </form> -->
+    
+                                <form id="register-form" action="/regristrieren" method="POST">
+                                    <div class="form-group">
+                                        <input type="text" name="username" id="username" tabindex="4" class="form-control" placeholder="Username" value="">
+                                    </div>
+                                    <div class="form-group">
+                                        <input type="password" name="password" id="password" tabindex="5" class="form-control" placeholder="Passwort">
+                                    </div>
+                                    <div class="form-group">
+                                        <input type="password" name="repeatpwd" id="repeatpwd" tabindex="6" class="form-control" placeholder="Passwort bestätigen">
+                                    </div>
+                                    <div class="form-group">
+                                        <div class="row">
+                                            <div class="col-sm-6 col-sm-offset-3">
+                                                <input type="submit" name="register-submit" id="register-submit" tabindex="7" class="form-control btn btn-success" value="Registrieren">
+                                            </div>
+                                        </div>
+                                    </div>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-        <div class="row">
-            Passwort wiederholen:
-        </div>
-            <input type="password" name="repeatpwd">
-        </div>
-        <div class="row">
-            <button type="submit">Regristrieren!</button>
-        </div>
-    </form>
+    </div>
+    
 </body>
+
 </html>
