--- a/views/messenger.ejs
+++ b/views/messenger.ejs
@@ -51,7 +51,7 @@
       <p>Du hast <b>0</b> ungelesene Mails!</p>
       <p>
         
-      <div class="space">
+      <!-- <div class="space">
         <h4>Was möchten Sie tun?</h4>
         <div class="row">
           <div class="col-md-12">
@@ -59,13 +59,13 @@
             <button type="button" class="btn btn-default">Markierte als gelesen markieren</button>
           </div>
         </div>
-      </div>
+      </div> -->
 
       <!--incoming mails-->
       <div class="space">
         <h4>Mails</h4>
         <div class="row">
-          <div class="col-md-8">
+          <div class="col-md-12">
             <% for(var i = 0; i < messeges.length; i++) { %>
               <div style="margin-top: 2px;" class="form-control"><%= messeges[i].mail %></div>
             <%}%>
@@ -73,6 +73,7 @@
         </div>
       </div>
       <div style="margin-top: 10px;">
+          <button type="button" class="btn btn-success" data-toggle="collapse" data-target="#hide">Neue Mail verfassen</button>
           <button type="button" class="btn btn-primary" data-toggle="collapse" data-target="#hide">Antworten</button>
           <button type="button" class="btn btn-danger">Löschen</button>
       </div>
@@ -80,13 +81,13 @@
       <!--send mail-->
       <div id="hide" class="collapse">
         <div class="space">
-          <h4>Mails</h4>
+          <h4>Neue Mail</h4>
           <form action="/neueMail" method="POST">
             <div class="form-group">
-              <label>Neue Mail/ Mail beantworten</label>
+              <label>Neue Mail / Mail beantworten</label>
               <div class="form-group">
-                  <textarea class="form-control" rows="5" name="mail" placeholder="Schreibe hier deine neue Nachricht."></textarea>
-                </div>
+                <textarea class="form-control" rows="5" name="mail" placeholder="Schreibe hier deine neue Nachricht."></textarea>
+              </div>
             </div>
             <div class="form-group">
               <label for="outAdress">Senden an:</label>
@@ -96,7 +97,7 @@
               <%}%>
               </select>
             </div>
-            <button type="submit" class="btn btn-primary">Mails Senden</button>
+            <button type="submit" class="btn btn-primary">Mail Senden</button>
           </form>
         </div>
       </div>
