--- a/views/messenger.ejs
+++ b/views/messenger.ejs
@@ -17,9 +17,9 @@
         text-decoration: none;
         color: rgb(80,176,255);
       }
-      div, a, h1 {
-        /*border: 1px solid green;*/
-      }
+      /* div, a, h1 {
+        border: 1px solid green;
+      } */
       .space {
         padding: 20px 0 0;
       }
