Add Browse + kleineres

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -42,6 +42,7 @@
                 <li><a href="messenger">Messenger</a></li>
                 <li><a href="profile">Profile</a></li>
                 <li class="active"><a href="dashboard">Dashboard</a></li>
+                <li><a href="allUsers">Browse Users</a></li>
               </ul>
               <ul class="nav navbar-nav navbar-right">
                 <li><a href="/logout"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
