--- a/views/messenger.ejs
+++ b/views/messenger.ejs
@@ -37,6 +37,7 @@
               <li class="active"><a href="messenger">Messenger</a></li>
               <li><a href="profile">Profile</a></li>
               <li><a href="dashboard">Dashboard</a></li>
+              <li><a href="allUsers">Browse Users</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
               <li><a href="/logout"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
