Tippfehler in notebook und messenger

--- a/views/messenger.ejs
+++ b/views/messenger.ejs
@@ -67,8 +67,8 @@
         <h4>Mails</h4>
         <div class="row">
           <div class="col-md-12">
-            <% for(var i = 0; i < messeges.length; i++) { %>
-              <div style="margin-top: 2px;" class="form-control"><%= messeges[i].mail %></div>
+            <% for(var i = 0; i < messages.length; i++) { %>
+              <div style="margin-top: 2px;" class="form-control"><%= messages[i].mail %></div>
             <%}%>
           </div>          
         </div>
