--- a/views/notebook.ejs
+++ b/views/notebook.ejs
@@ -63,7 +63,7 @@
 					<a class="nav-link" href="notebook">Notebook</a>
 				</li>
 				<li class="nav-item" style="padding: 9px 6px 5px 7.5px;">
-					<a class="nav-link" href="messenger">Messeger</a>
+					<a class="nav-link" href="messenger">Messenger</a>
 				</li>
 				<li class="nav-item" style="padding: 9px 6px 5px 7.5px;">
 					<a class="nav-link" href="profile">Profile</a>
